# pam_unshare_tmp

./: ChangeLog.md  LICENSE  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  pam_unshare_tmp.conf  update_changelog
src/: Makefile.am  debug.h  ini.c  ini.h  pam_unshare_tmp.c  pam_unshare_tmp.map  parameters.c  parameters.h  sessions_counter.h  version.c
